--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,17 @@
-body {
+html {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Dosis', sans-serif;
+  font-size: 18px;
+  color: #3A4245;
+}
+
+.section-wrapper {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+}
+
+.section {
+  max-width: 960px;
 }
