--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,11 @@ h2 {
   text-align: center;
 }
 
+h2 small {
+  display: block;
+  font-weight: 400;
+}
+
 .content {
   display: flex;
   flex-direction: row;
@@ -77,6 +82,10 @@ a.light:hover {
   width: 20px;
 }
 
+.bank {
+  width: 50%;
+}
+
 @media screen and (max-width: 600px) {
   .content {
     flex-direction: column;
@@ -88,5 +97,9 @@ a.light:hover {
     background: #F2EEE7;
     padding: 10px 10px 0;
     margin-bottom: -30px;
+  }
+
+  .bank {
+    width: 100%;
   }
 }
